force-app/main/default/objects/Account/fields/Active_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Active_Buyer__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox (Default: True), indicating if the account is
an active buyer.</description>
    <label>Active Buyer</label>
    <type>Checkbox</type>
</CustomField>