force-app/main/default/objects/Account/fields/Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent__c</fullName>
    <description>The discount in percentage.</description>
    <label>Discount  %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>