force-app/main/default/objects/Account/fields/Total_Cars_Bought__c.field-meta.xml
<CustomField>
    <fullName>Total_Cars_Bought__c</fullName>
    <description>Tracks the number of cars purchased by the
account.</description>
    <label>Total Cars Bought</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>